[project]
name = "etl-file-tools"
version = "0.1.0"
description = "Project to help with integrating data from files to other systems."
authors = [
    {name = "mxjxc.dev",email = "mxjxc.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[tool.poetry]
packages = [{include = "etl_file_tools", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
